--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -3,4 +3,9 @@
     <string name="app_name">Lab 1</string>
     <string name="hello_message">Bonjour!</string>
     <string name="ButtonText">Je suis un bouton!</string>
+    <string name="Lab2Title">Voici mes widgets:</string>
+    <string name="Lab2Button">Bouton</string>
+    <string name="Lab2CheckBox">Regarde ça!</string>
+    <string name="Lab2Switch">Interrupteur ouvert / fermé</string>
+    <string name="Lab2Hint">Tapez votre réponse ici</string>
 </resources>
