--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Lab 5</string>
+    <string name="app_name">Lab 6</string>
     <string name="hello_message">Bonjour!</string>
     <string name="ButtonText">Je suis un bouton!</string>
 
@@ -22,6 +22,7 @@
         <string name="Lab3_profile_text4_picture">Votre photo:</string>
         <string name="Lab3_profile_text5_takePicture">Appuyez sur le bouton ci-dessus pour prendre une photo</string>
         <string name="Lab4_profile_chat_button">Aller au chat</string>
+        <string name="Toolbar_page_button">Aller à la page barre d\'outils</string>
 
     <!-- Lab 4 strings -->
 
@@ -29,6 +30,16 @@
         <string name="Lab4_chatSendButton">ENVOYER</string>
         <string name="Lab4_chatEditText">Tapez ici</string>
         <string name="Lab4_chatReceiveButton">RECEVOIR</string>
+
+    <!-- Lab 6 -->
+        <string name="Lab6_snackBar">Retourner??</string>
+        <string name="Lab6_snackBarButton">Retourner</string>
+        <string name="Lab6_toastMessage">Voici le message initial</string>
+        <string name="Lab6_dialog_textView">Quel est votre nouveau message?</string>
+        <string name="Lab6_dialog_editText">Taper ici</string>
+        <string name="Lab6_dialog_positive">Changer</string>
+        <string name="Lab6_dialog_negative">Annuler</string>
+        <string name="Lab6_overflow">Vous avez cliqué le menu à trop-plein</string>
 
 
 </resources>
